--- a/BernuGramatas/src/app/components/product-list/product-list.component.scss
+++ b/BernuGramatas/src/app/components/product-list/product-list.component.scss
@@ -49,6 +49,7 @@
     cursor: pointer;
     transition: background-color 0.3s;
     width: 100%; /* Make button width 100% of its container */
+    height: 44px;
   }
   
   /* Responsive Styles */
