--- a/BernuGramatas/src/app/components/product-detail/product-detail.component.html
+++ b/BernuGramatas/src/app/components/product-detail/product-detail.component.html
@@ -1,9 +1,11 @@
 <!-- src/app/components/product-detail/product-detail.component.html -->
-<div *ngIf="product">
+<div *ngIf="product" class="product-detail">
     <h2>{{ product.name }}</h2>
     <img [src]="product.imageUrl" alt="{{ product.name }}">
-    <p>{{ product.description }}</p>
-    <p>Price: ${{ product.price }}</p>
-    <button (click)="addToCart(product)">Add to Cart</button>
+    <div class="product-info">
+      <p>{{ product.description }}</p>
+      <p>Price: ${{ product.price }}</p>
+      <button (click)="addToCart(product)">Add to Cart</button>
+    </div>
   </div>
   
