--- a/BernuGramatas/src/app/components/footer/footer.component.html
+++ b/BernuGramatas/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- src/app/components/footer/footer.component.html -->
 <footer class="footer">
-    <p>&copy; 2023 My Online Shop. All rights reserved.</p>
+    <p>&copy; 2023 Bērnu Spēļu Grāmatas. Visas tiesības aizsargātas.</p>
   </footer>
   
