--- a/BernuGramatas/src/styles.scss
+++ b/BernuGramatas/src/styles.scss
@@ -1,13 +1,13 @@
 /* src/styles.css */
 
 body {
-    font-size: 36px; /* Set your desired base font size here */
+    font-size: 1rem; /* Set your desired base font size here */
     font-family: 'Patrick Hand SC', cursive; /* Specify 'Patrick Hand SC' as the font family */
 
   }
   
   p {
-    font-size: 3rem; /* Set your desired font size for paragraphs here */
+    font-size: 2rem; /* Set your desired font size for paragraphs here */
   }
   a{
     font-size: 2rem;
