--- a/BernuGramatas/src/app/components/product-detail/product-detail.component.html
+++ b/BernuGramatas/src/app/components/product-detail/product-detail.component.html
@@ -5,7 +5,7 @@
     <div class="product-info">
       <p>{{ product.description }}</p>
       <p>Price: ${{ product.price }}</p>
-      <button (click)="addToCart(product)">Add to Cart</button>
+      <button (click)="addToCart(product)">Uz grozu</button>
     </div>
   </div>
   
