Products displayed based on categories

--- a/BernuGramatas/src/app/app.component.html
+++ b/BernuGramatas/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!-- src/app/app.component.html -->
+<app-navbar-tabs></app-navbar-tabs>
 <app-navbar></app-navbar>
+<app-navbar-categories></app-navbar-categories>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
