--- a/BernuGramatas/src/app/components/cart/cart.component.scss
+++ b/BernuGramatas/src/app/components/cart/cart.component.scss
@@ -1,26 +1,35 @@
 /* cart.component.scss */
+
 .cart-item {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .product-name {
-    font-weight: bold;
-  }
-  
-  .product-price {
-    color: #007bff; /* Blue color for the price */
-  }
-  
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-name {
+  font-weight: bold;
+}
+
+.product-price {
+  color: #007bff; /* Blue color for the price */
+}
+
+.remove-button {
+  background-color: #dc3545; /* Red color for the remove button */
+  color: white;
+  border: none;
+  padding: 20px 30px; /* Adjust the padding to make the button responsive */
+  cursor: pointer;
+  font-size: 1.5em; /* Adjust the font size for the Remove text */
+}
+
+@media (max-width: 600px) {
+  /* Adjust styles for smaller screens if needed */
   .remove-button {
-    background-color: #dc3545; /* Red color for the remove button */
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
+    padding: 6px 10px;
+    font-size: 1.5em;
   }
-  
+}
