--- a/BernuGramatas/src/app/components/navbar/navbar.component.html
+++ b/BernuGramatas/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,14 @@
 <!-- src/app/components/navbar/navbar.component.html -->
 <div class="navbar">
-    <div class="logo">
-      <a routerLink="/">My Shop</a>
-    </div>
-    <div class="cart">
-      <a routerLink="/cart">🛒 <span>{{ getCartItemCount() }}</span></a>
-    </div>
+  <div class="logo">
+    <a routerLink="/">
+      <img src="/assets/logo.svg" alt="Logo">
+    </a>
   </div>
-  
+  <div class="cart">
+    <a routerLink="/cart">
+      <img src="/assets/cart.png" alt="Cart">
+      <div class="count">{{ getCartItemCount() }}</div>
+    </a>
+  </div>
+</div>
