--- a/BernuGramatas/src/app/components/footer/footer.component.scss
+++ b/BernuGramatas/src/app/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
 /* src/app/components/footer/footer.component.scss */
 .footer {
-    background-color: #333;
-    color: #fff;
+    background-color: transparent;
+    color: black;
     padding: 10px;
     text-align: center;
   }
