--- a/BernuGramatas/src/app/components/product-detail/product-detail.component.scss
+++ b/BernuGramatas/src/app/components/product-detail/product-detail.component.scss
@@ -1,38 +1,60 @@
-.product-detail {
-  text-align: center;
-  padding: 1em;
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1em;
+  padding: 20px;
 }
 
-.product-detail img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 1em;
-}
-
-.product-detail .product-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.product-detail p {
-  font-size: 16px; /* Adjusted font size */
-  margin-bottom: 1em;
-}
-
-.product-detail button {
-  min-height: 44px; /* Adjusted button height */
-  width: 40%; /* Adjust the width for responsiveness */
-  border: 3px solid #4CAF50;
-  background-color: transparent;
-  color: #4CAF50;
-  font-size: 18px; /* Adjusted font size */
-  border-radius: 20px;
-  margin-top: 1em;
-}
-
-.product-detail button:hover {
-  background-color: #4CAF50;
-  color: white;
+.product-item {
+  display: flex; /* Change to flex to align items */
+  align-items: center; /* Center-align items vertically */
+  box-sizing: border-box;
+  border: 1px solid #ddd;
   cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.product-item:hover {
+  transform: translateY(-5px);
+}
+
+.product-item img {
+  width: 30%; /* Adjust the width of the image */
+  height: auto;
+  object-fit: cover;
+  margin-right: auto; /* Move the image to the right */
+}
+
+.product-info {
+  padding: 1em;
+  flex: 1; /* Expand to fill remaining space */
+}
+
+.product-info h3 {
+  margin-bottom: 0.5em;
+  font-size: 18px;
+}
+
+.product-info .price {
+  font-size: 2.4rem;
+  font-weight: 500;
+  padding-right: 4px;
+}
+
+.product-item button {
+  width: 100%;
+  padding: 0.6em 0;
+  background-color: #eea796;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 22px;
+}
+
+.product-item button:hover,
+.product-info .quantity button:hover {
+  background-color: #d87056;
 }
