--- a/BernuGramatas/src/app/components/product-list/product-list.component.html
+++ b/BernuGramatas/src/app/components/product-list/product-list.component.html
@@ -1,20 +1,14 @@
-<!-- src/app/components/product-list/product-list.component.html -->
 <div class="product-list">
   <div *ngFor="let product of products" class="product-item">
-    <img [src]="product.imageUrl" alt="{{ product.name }}" (click)="viewProductDetails(product)">
-    <div class="product-info" (click)="$event.stopPropagation()">
-      <h3>{{ product.name }}</h3>
-      <p>{{ product.price | currency }}</p>
-      <button (click)="addToCart(product)">Uz grozu</button>
-    </div>
+    <img [src]="product.imageUrl" alt="{{ product.name }}">
+    <div class="product-info">
+      <div class="product-name">{{ product.name }}</div>
+      <div class="price-vat">
+        <p class="price">{{ product.price | currencyFormat }}</p>
+        <p class="vat-info">Ar PVN 5%</p>
+      </div>
+      <p class="delivery-time">Aptuvenais piegādes datums: {{ product.estimatedDeliveryDate | date:'dd.MM.yyyy' }}</p>
+      <button (click)="addToCart(product)">Pievienot grozam</button>
+    </div>    
   </div>
 </div>
-<!-- <div class="product-list">
-    <div *ngFor="let product of products" class="product-item">
-      <img [src]="product.imageUrl" alt="{{ product.name }}">
-      <h3>{{ product.name }}</h3>
-      <p>Price: ${{ product.price }}</p>
-      <button (click)="viewProductDetails(product)">View Details</button>
-    </div>
-  </div> -->
-  
