--- a/BernuGramatas/src/app/components/product-list/product-list.component.scss
+++ b/BernuGramatas/src/app/components/product-list/product-list.component.scss
@@ -1,63 +1,88 @@
-/* src/app/components/product-list/product-list.component.scss */
-
 .product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr)); /* Adjusted to show 3 products per row */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1em;
-  padding: 20px; /* Adjusted padding */
-  margin: 0;
+  padding: 20px;
 }
 
 .product-item {
+  display: flex; /* Added */
+  flex-direction: column; /* Added */
+  align-items: center; /* Added */
   text-align: center;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
   border: 1px solid #ddd;
-  padding: 1em;
-  cursor: pointer; /* Add this line to set the cursor to a hand */
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  margin-bottom: 20px; // Add margin-bottom for spacing between product items
+}
+
+.product-item:hover {
+  transform: translateY(-5px);
 }
 
 .product-item img {
+  margin-top: 10%;
   width: 100%;
-  height: 500px; /* Adjusted height to be a fixed value */
+  height: 45%;
+  max-width: 175px;
   object-fit: cover;
+  border-radius: 8px;
 }
 
-.product-details {
-  flex-grow: 1;
+.product-info {
+  padding: 1em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
 }
 
-.product-details h3 {
-  font-size: 1.2em;
+.product-info .product-name {
   margin-bottom: 0.5em;
+  font-size: 18px;
 }
 
-.product-details p {
-  margin: 0;
+.product-info .price-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.product-info .price {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.price-vat {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.product-info .vat-info {
+  font-size: 14px;
+  color: #637381;
 }
 
 .product-item button {
-  margin-top: auto;
-  padding: 0.5em 1em;
-  background-color: #4caf50;
+  width: 70%;
+  padding: 13px 8px;
+  background-color: #eea796;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
-  width: 100%; /* Make button width 100% of its container */
-  height: 44px;
+  font-family: Inter, sans-serif;
+  font-size: 15px;
+  font-weight: 500;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .product-list {
-    grid-template-columns: repeat(auto-fill, minmax(48%, 1fr)); /* Adjust columns for smaller screens */
-  }
+.product-item button:hover,
+.product-info .quantity button:hover {
+  background-color: #d87056;
+}
+
+.delivery-time {
+  font-size: 14px;
+  color: #637381;
 }
