--- a/BernuGramatas/src/styles.scss
+++ b/BernuGramatas/src/styles.scss
@@ -2,14 +2,16 @@
 
 body {
     font-size: 1rem; /* Set your desired base font size here */
-    font-family: 'Patrick Hand SC', cursive; /* Specify 'Patrick Hand SC' as the font family */
+    font-family: Inter, sans-serif;
 
   }
   
   p {
-    font-size: 2rem; /* Set your desired font size for paragraphs here */
+    font-size: 1.6rem; /* Set your desired font size for paragraphs here */
+    font-family: Inter, sans-serif;
   }
   a{
     font-size: 2rem;
+    font-family: Inter, sans-serif;
   }
   
