responsive design of products

--- a/BernuGramatas/src/app/components/navbar/navbar.component.html
+++ b/BernuGramatas/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="cart">
     <a routerLink="/cart">
-      <img src="/assets/cart.png" alt="Cart">
+      <img src="/assets/cart.svg" alt="Cart">
       <div class="count">{{ getCartItemCount() }}</div>
     </a>
   </div>
