improved design of navbar

--- a/BernuGramatas/src/app/components/navbar-categories/navbar-categories.component.html
+++ b/BernuGramatas/src/app/components/navbar-categories/navbar-categories.component.html
@@ -3,15 +3,15 @@
     <a routerLink="/products">Visi produkti</a>
   </li>
   <li [class.active]="activeCategory === 'velcro'">
-    <img src="/assets/category_velcro.png" alt="Spēles ar lipekļiem" class="category-logo">
+    <img src="/assets/category_velcro.svg" alt="Spēles ar lipekļiem" class="category-logo">
     <a routerLink="/products/velcro">Spēles ar lipekļiem</a>
   </li>
   <li [class.active]="activeCategory === 'draw'">
-    <img src="/assets/category_draw.png" alt="Raksti un Dzēs" class="category-logo">
+    <img src="/assets/category_draw.svg" alt="Raksti un Dzēs" class="category-logo">
     <a routerLink="/products/draw">Raksti un Dzēs</a>
   </li>
   <li [class.active]="activeCategory === 'cards'">
-    <img src="/assets/category_cards.png" alt="Attīstošās kartītes" class="category-logo">
+    <img src="/assets/category_cards.svg" alt="Attīstošās kartītes" class="category-logo">
     <a routerLink="/products/cards">Attīstošās kartītes</a>
   </li>
 </ul>
