--- a/BernuGramatas/src/app/components/cart/cart.component.html
+++ b/BernuGramatas/src/app/components/cart/cart.component.html
@@ -1,7 +1,12 @@
 <!-- cart.component.html -->
-<div *ngFor="let product of getCartItems()" class="cart-item">
+<div *ngIf="getCartItems().length === 0; else cartItems" class="empty-cart-message">
+  Jūsu iepirkumu grozs ir tukšs.
+</div>
+
+<ng-template #cartItems>
+  <div *ngFor="let product of getCartItems()" class="cart-item">
     <p class="product-name">{{ product.name }}</p>
     <p class="product-price">Price: ${{ product.price }}</p>
     <button (click)="removeFromCart(product)" class="remove-button">Remove</button>
   </div>
-  
+</ng-template>
