--- a/BernuGramatas/src/app/components/cart/cart.component.scss
+++ b/BernuGramatas/src/app/components/cart/cart.component.scss
@@ -25,6 +25,16 @@
   cursor: pointer;
   font-size: 1.5em; /* Adjust the font size for the Remove text */
 }
+/* cart.component.scss */
+
+.empty-cart-message {
+  font-size: 1.2em;
+  color: #777;
+  text-align: center;
+  margin-top:30px;
+  margin-bottom: 20px;
+}
+
 
 @media (max-width: 600px) {
   /* Adjust styles for smaller screens if needed */
